# slibc

./: .gitignore  CMakeLists.txt  FaceDetection.cpp  ImageConversion.cpp  swig_interface.i
include/: FaceDetection.h  ImageConversion.h  Swig.h  Types.h
tools/: maxface.cpp  trainhelen.cpp  trainshape.cpp
